# moodle-chatrunner

./: .gitignore  CHANGELOG.md  IDUN.md  README.md  TESTING.md  batchtest.sh  docker-compose.yml  idun.json  idun.toml  ollama.json  requirements.txt  test.sh
.github/workflows/: pypideploy.yml  pypitest.yml  wheels.yml
Example/: exphil-idun.toml  exphil-lit.txt  exphil-output.toml  exphil.toml  optics.toml  questions-sandbox-Mikroskopet-20251110-1516.xml
Example/Transducer/: criteria.md  nonanswer.md  prompt-transducer.md  transducer.md
Notes/: Testing  idun-models
config/: chatgpt.json
jobe/: Dockerfile
jobe-production/: Dockerfile
jobe/ChatRunner/: Example  README.md  chatgpt.py  pyproject.toml  test.sh
jobe/ChatRunner/ChatRunner/: TestResults.py  __init__.py  __main__.py  chatrunner.py  helper.py  prettyprint.py  prompt2.md  query.py  sandbox.py  schema.json  testprogram.py.txt
jobe/ChatRunner/Legacy/: graderstate.py
notes/: exphil2idun.md  exphil2idun.toml
