[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ChatRunner"
dynamic = [ "version" ]
authors = [
  { name='Hans Georg Schaathun', email="hasc@ntnu.no" },
  { name='Jonas Julius Harag' },
]
description = 'Feedback from Large Language Models in Moodle'
readme = "README.md"
dependencies = [
   "requests", "toml"
   ]

requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
license = "GPL-3.0"
license-files = ["LICENSE.txt"]
keywords=[ 'elearning', 'artifical intelligence', 'large language models', 'automatedassessment' ]

[tool.setuptools.dynamic]
version = {attr = "ChatRunner.__version__"}

[project.urls]
Homepage = "https://github.com/iirevu/moodle-chatrunner"
Issues = "https://github.com/iirevu/moodle-chatrunner/issues"

[tool.hatch.build.targets.wheel]
packages = [ "ChatRunner" ]

